enable react strict mode

--- a/react.html
+++ b/react.html
@@ -231,7 +231,7 @@
             }
 
             const root = ReactDOM.createRoot(document.getElementById("root"));
-            root.render(<Container />);
+            root.render(<React.StrictMode><Container /></React.StrictMode>);
         </script>
     </body>
 </html>
