--- a/react.html
+++ b/react.html
@@ -35,8 +35,8 @@
                 getDay() { return this.#date.getDay(); }
 
                 toDate() { return new Date(this.#date); }
-                between(startDate, endDate) {
-                    return this.toDate() >= startDate.toDate() && this.toDate() <= endDate.toDate();
+                between(calStartDate, calEndDate) {
+                    return this.toDate() >= calStartDate.toDate() && this.toDate() <= calEndDate.toDate();
                 }
 
                 toValueString() {
@@ -96,9 +96,9 @@
                 );
             }
 
-            function Month({firstOfMonth, startDate, endDate, firstDayOfWeek, isFirstMonth, isLastMonth, isLabel}) {
+            function Month({firstOfMonth, calStartDate, calEndDate, firstDayOfWeek, isFirstMonth, isLastMonth, isLabel}) {
                 const firstDate = firstOfMonth.getPrecedingWeekday(firstDayOfWeek);
-                const dateInRange = (date) => date.getMonth() == firstOfMonth.getMonth() && date.between(startDate, endDate);
+                const dateInRange = (date) => date.getMonth() == firstOfMonth.getMonth() && date.between(calStartDate, calEndDate);
                 return (
                     <div className={classNames({
                         "month": true,
@@ -116,19 +116,19 @@
                 );
             }
 
-            function Calendar({startDate, endDate, firstDayOfWeek}) {
-                let firstOfMonth = startDate.getFirstOfMonth();
+            function Calendar({calStartDate, calEndDate, firstDayOfWeek}) {
+                let firstOfMonth = calStartDate.getFirstOfMonth();
                 let isFirstMonth = true;
                 
                 const months = [];
                 while (true) {
                     const nextFirstOfMonth = firstOfMonth.add(0, 1 ,0).getFirstOfMonth();
-                    const isLastMonth = !nextFirstOfMonth.between(startDate, endDate);
+                    const isLastMonth = !nextFirstOfMonth.between(calStartDate, calEndDate);
 
                     months.push(
                         <Month
                             key={firstOfMonth.toValueString()}
-                            {...{firstOfMonth, startDate, endDate, firstDayOfWeek, isFirstMonth, isLastMonth}}
+                            {...{firstOfMonth, calStartDate, calEndDate, firstDayOfWeek, isFirstMonth, isLastMonth}}
                         />
                     )
 
@@ -151,22 +151,22 @@
 
             function Container() {
                 const [title, setTitle] = React.useState("Title");
-                const [startDate, setStartDate] = React.useState(new CalendarDate());
-                const [endDate, setEndDate] = React.useState(startDate.add(1, 0, 0));
+                const [calStartDate, setcalStartDate] = React.useState(new CalendarDate());
+                const [calEndDate, setcalEndDate] = React.useState(calStartDate.add(1, 0, 0));
                 const [firstDayOfWeek, setFirstDayOfWeek] = React.useState(1); // Monday
 
                 return (
                     <div className="container">
-                        <Header   {...{title, startDate, endDate}} />
-                        <Calendar {...{startDate, endDate, firstDayOfWeek}} />
-                        <Settings {...{title, setTitle, startDate, setStartDate, endDate, setEndDate, firstDayOfWeek, setFirstDayOfWeek}} />
+                        <Header   {...{title, calStartDate, calEndDate}} />
+                        <Calendar {...{calStartDate, calEndDate, firstDayOfWeek}} />
+                        <Settings {...{title, setTitle, calStartDate, setcalStartDate, calEndDate, setcalEndDate, firstDayOfWeek, setFirstDayOfWeek}} />
                     </div>
                 )
             }
 
-            function Header({title, startDate, endDate}) {
-                const startYear = startDate.getFullYear();
-                const endYear = endDate.getFullYear();
+            function Header({title, calStartDate, calEndDate}) {
+                const startYear = calStartDate.getFullYear();
+                const endYear = calEndDate.getFullYear();
                 
                 let yearSpan = "";
 
@@ -187,7 +187,7 @@
                 )
             }
 
-            function Settings({title, startDate, endDate, firstDayOfWeek, setTitle, setStartDate, setEndDate, setFirstDayOfWeek}) {
+            function Settings({title, calStartDate, calEndDate, firstDayOfWeek, setTitle, setcalStartDate, setcalEndDate, setFirstDayOfWeek}) {
                 const today = new CalendarDate();
 
                 const weekdayOptions = [];
@@ -213,11 +213,11 @@
                             </p>
                             <p>
                                 <label>Start Date:</label>
-                                <input type="date" defaultValue={startDate.toValueString()} onChange={(e) => handleDateChange(e, setStartDate)} />
+                                <input type="date" defaultValue={calStartDate.toValueString()} onChange={(e) => handleDateChange(e, setcalStartDate)} />
                             </p>
                             <p>
                                 <label>End Date:</label>
-                                <input type="date" defaultValue={endDate.toValueString()} onChange={(e) => handleDateChange(e, setEndDate)} />
+                                <input type="date" defaultValue={calEndDate.toValueString()} onChange={(e) => handleDateChange(e, setcalEndDate)} />
                             </p>
                             <p>
                                 <label>Start Weekday:</label>
